# quizzy

./: .gitignore  CMakeLists.txt  Makefile  Matrix.cpp  PolynomialRegression.h  README.md  entropy.cc  matching.cc  model_fitting_script.m  modeling.cc  polynomial_model.cc  polynomial_model.h  random_dat.txt  strings.cc  words.txt
_entropy/: CMakeLists.txt  Makefile  README.md
_entropy/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
_entropy/src/: entropy.cc
_entropy/xcode/: CMakeCache.txt  cmake_install.cmake
_entropy/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
_entropy/xcode/entropy.xcodeproj/: project.pbxproj
_matching/: CMakeLists.txt  Makefile  README.md
_matching/src/: matching.cc
_matching/xcode/: CMakeCache.txt  cmake_install.cmake
_matching/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
_matching/xcode/matching.xcodeproj/: project.pbxproj
_modeling/: CMakeLists.txt  Makefile  README.md
_modeling/src/: modeling.cc
_modeling/xcode/: CMakeCache.txt  cmake_install.cmake
_modeling/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
_modeling/xcode/modeling.xcodeproj/: project.pbxproj
_strings/: CMakeLists.txt  Makefile  README.md
_strings/src/: strings.cc
_strings/xcode/: CMakeCache.txt  cmake_install.cmake
_strings/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
_strings/xcode/strings.xcodeproj/: project.pbxproj
backup/: matching.cc  modeling.cc
include/: Matrix.h
matrix_lib/: CMakeLists.txt  Matrix.cpp
matrix_lib/test/: MatrixTest.cpp
tests/: matrixTest.cpp
